<resources>
    <string name="permission_deny_text" translatable="false">Required permissions denied. Exiting.</string>
    <string name="tensorflow_lite_logo_description" translatable="false">TensorFlow Lite logo</string>
    <string name="app_name">Beercognition</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="startup_slogan">SCAN IT HERE</string>
    <string name="startup_slogan_2">DRINK SOME BEER</string>
    <string name="menu_camera">Scan</string>
    <string name="menu_about">About</string>
    <string name="menu_beers">Beers</string>

    <string name="details_percentage">Alcohol %</string>
    <string name="details_jaar">Year</string>
    <string name="details_brouwerij">Brewery</string>
    <string name="details_title">Details</string>
    <string name="details_desc_beer">Picture of your beer</string>
    <string name="desc_logo" translatable="false">Beercognition logo</string>
</resources>