<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.tensorflow.lite.examples.classification.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_scan"
        android:name="org.tensorflow.lite.examples.classification.ui.scan.ScanFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/nav_beers"
        android:name="org.tensorflow.lite.examples.classification.ui.beer.BeerFragment"
        android:label="@string/menu_beers"
        tools:layout="@layout/fragment_beer" />

    <fragment
        android:id="@+id/nav_about"
        android:name="org.tensorflow.lite.examples.classification.ui.about.AboutFragment"
        android:label="About"
        tools:layout="@layout/fragment_about" />
</navigation>